--- a/client/stylesheets/module/_Overrides.scss
+++ b/client/stylesheets/module/_Overrides.scss
@@ -9,9 +9,9 @@
   font-family: "proxima_nova_altbold", sans-serif !important;
   border-radius: 3px!important;
 }
-body { background-color: #f6f6f6!important; }
-.jumbotron { background-image: url("abdominal-exercise-abdominal-trainer-action-416747.jpg"); border-radius: 0px!important; height: 100vh; }
-
+body { background-color: #f6f6f6!important; 
+  padding-top: 51px;/* this is for navbar-fixed-top */ 
+}
 
 
 /* Utilities */
